--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/scripts.js"></script>
     <title>To Do</title>
@@ -12,22 +12,27 @@
       <div class="jumbotron">
         <h1>To Do List</h1>
       </div>
-      
+
       <form id="todo-Form">
         <div class="form-group">
-          <label for="todo-Item">What do you need To Do?</label>
-          <input id="todo-Item" class="form-control" type="text">
+          <label for="todo-Desc">What do you need To Do?</label>
+          <input id="todo-Desc" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="todo-Date">Date to complete by?</label>
+          <input id="todo-Date" class="form-control" type="text">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
 
-      <div class="todo">
-        <h3>To Do</h3>
+      <div class="toDo">
+        <h3>To Do:</h3>
+        <p>(Click on an item when it is complete)</p>
         <ul class="undecorated" id="todo-List"></ul>
       </div>
       <div class="done">
-        <h3>Your Completed Tasks</h3>
-        <ul class="undecorated" id="done-list"></ul>
+        <h3>Your Completed Tasks:</h3>
+        <ul class="undecorated" id="done-List"></ul>
       </div>
     </div>
   </body>
